@@ -1250,7 +1250,8 @@
 7) kernel: ralink_mtd: sync MT7621/MT7628 SPI/NAND flash drivers with SDK 5.0.0.0.<br>
 8) kernel: ralink_ppe: sync with 5.0.0.0 SDK.<br>
 9) kernel: ralink_wifi: 7610: always set ldpc field to 0 in CAP_IE (7610 not support LDCP).<br>
-10) kernel: ralink_wifi: xxxx: fix mcs7 cap parse.<br>
+10) kernel: ralink_wifi: 7610: fix calculate rx amdsu size.<br>
+11) kernel: ralink_wifi: xxxx: fix mcs7 cap parse.<br>
 <br>
 <br>
 <b>TODO:</b><br>
